# logs into the app

appId: com.saucelabs.mydemoapp.android
---
- launchApp
- tapOn: "View menu"
- tapOn: "Log In"
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/nameET"
- inputText: "bod@example.com"
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/passwordET"
- inputText: "10203040"
- tapOn:
    text: "Login"
    index: 1



